# play-and-learn

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: check_mypy.yaml  check_pytest.yaml  kata_project_setup_check_lint.yaml  kata_project_setup_check_pytest.yaml  run_pytest.yaml
katas/play-with-project-setup/: README.md  pyproject.toml
katas/play-with-project-setup/src/play_with_project_setup/: dummy.py
katas/play-with-project-setup/tests/: test_dummy.py
katas/pytest-tutorial-freecodecamp/: README.md  pyproject.toml
katas/pytest-tutorial-freecodecamp/src/pytest_tutorial_freecodecamp/: my_functions.py  service.py  shapes.py
katas/pytest-tutorial-freecodecamp/tests/: conftest.py  test_circle.py  test_my_functions.py  test_rectangle.py  test_service.py  test_square.py
