[tool.poetry]
name = "pytest-tutorial-freecodecamp"
version = "0.1.0"
description = ""
authors = ["Matthias Busch (Datadrivers GmbH) <matthias.busch@datadrivers.de>"]
readme = "README.md"
packages = [{include = "pytest_tutorial_freecodecamp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest = "^7.4.3"
mypy = "^1.6.1"
ruff = "^0.1.3"
types-requests = "^2.31.0.10"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
strict = true
implicit_reexport = true
check_untyped_defs = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = ["src", "tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
